Comments and Deaths Model Filter >10

--- a/predict.ipynb
+++ b/predict.ipynb
@@ -291,12 +291,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Filter der Daten: Wir nehmen für die Modellbildung erst den Tag als Beginn, an dem der 100. Erkrankte gemeldet wurde."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ger_confirmed = ger_confirmed[ger_confirmed.confirmed>100]"
+    "ger_confirmed = ger_confirmed[ger_confirmed.confirmed>=100]"
    ]
   },
   {
