--- a/predict.ipynb
+++ b/predict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "[5 rows x 65 columns]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
        "2020-03-05        482     4"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,16 +444,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ausgangssperren_timestamp = datetime.date(2020, 3, 21)"
+    "ausgangssperren_timestamp = datetime.datetime(2020, 3, 21, 12, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,13 +496,6 @@
     "y = confirmed[:today]['confirmed'].values\n",
     "logy = np.log(y)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -513,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +516,7 @@
        "         normalize=False)"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +626,7 @@
        "2020-03-22      24873    21            NaN"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1140,7 @@
        "2020-04-02        NaN    32         609906         603453"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1165,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,8 +1291,10 @@
     "       legend='logistisches Wachstum\\n(Modell vom %s, R^2=%.3f)' % (today.strftime('%d.%m.%Y'), r))\n",
     "\n",
     "# Tatsächliche Fälle als Punkte\n",
-    "p.circle(confirmed.index, confirmed.confirmed, line_color=colors[4],\n",
-    "         fill_color=colors[5], size=14, legend='Bestätigte COVID-19 Fälle')\n",
+    "p.circle(confirmed.index, confirmed.confirmed,\n",
+    "         line_color=colors[4],\n",
+    "         fill_color=colors[5],\n",
+    "         size=14, legend='Bestätigte COVID-19 Fälle')\n",
     "\n",
     "# Achsen ordentlich formatieren\n",
     "p.xaxis.formatter=DatetimeTickFormatter(\n",
@@ -1326,6 +1321,7 @@
     "p.select_one(HoverTool).mode = 'vline'\n",
     "\n",
     "p.toolbar.autohide = True\n",
+    "p.toolbar.active_drag = None\n",
     "\n",
     "# Legende\n",
     "p.legend.location = \"top_left\"\n",
@@ -1352,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1364,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1394,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
